# stock-exchange

./: ..gitignore.kate-swp  .gitignore  README.md
Src/: CMakeLists.txt
Src/Client/: CMakeLists.txt  ClientMain.cpp  TcpClient.cpp  TcpClient.h
Src/Client/Registration/: Register.cpp  Register.h
Src/Server/: CMakeLists.txt
