#Find
FIND_PACKAGE(Boost 1.40 COMPONENTS system REQUIRED)
FIND_PACKAGE(Threads REQUIRED)

#Include
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/Common/)

# Variables
SET(CMAKE_CXX_STANDARD 17)
SET(SOURCES
Client.cpp
)

#Exe
ADD_EXECUTABLE(Client Client.cpp)

#Link
TARGET_LINK_LIBRARIES(Client PRIVATE Threads::Threads ${Boost_LIBRARIES})