#Find
FIND_PACKAGE(Boost 1.40 COMPONENTS system REQUIRED)
FIND_PACKAGE(Threads REQUIRED)

#Include
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/Common/)

# Variables
SET(CMAKE_CXX_STANDARD 17)
SET(SOURCES
Server.cpp
)

#Exe
ADD_EXECUTABLE(Server Server.cpp)

#Link
TARGET_LINK_LIBRARIES(Server PRIVATE Threads::Threads ${Boost_LIBRARIES})